# xpdfsuite

./: .readthedocs.yaml  INSTALLATION_GUIDE.md  LAUNCH_APP.md  README.md  pyproject.toml
__pycache__/: recalibration.find_center_from_rings.locals.compute_radial_profile_fast-51.py310.1.nbc  recalibration.find_center_from_rings.locals.compute_radial_profile_fast-51.py310.nbi
notebooks/: geometric_calibration.ipynb
src/ePDFsuite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/xpdfsuite/: __init__.py  _launcher.py  app_xpdfsuite.py  calibration.py  filereader.py  lobato_parameters.json  lobato_scattering.py  pdf_extraction.py  recalibration.py  recalibration.py.bak  snr.py  utilities.py  xpdf_pipeline.py  xpdfsuite.py
src/xpdfsuite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
